| Summary: | ASTERISK-26045: [patch]app_voicemail: fix bugs, imap mm_status log change to debug | ||
| Reporter: | Alexei Gradinari (alexei gradinari) | Labels: | |
| Date Opened: | 2016-05-20 13:56:15 | Date Closed: | 2016-06-23 10:52:44 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_voicemail Applications/app_voicemail/IMAP |
| Versions: | 13.9.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Fixed some bugs:
- create dirpath when save downloading message from IMAP storage. - create IMAP folder if not exists when saving to IMAP storage - check if file successfully opened before write to it - some IMAP checks - remove non-standard flag 'Unseen' etc Change to debug IMAP mm_status log instead of verbose. Remove unused X-Asterisk-VM-Caller-channel message header for security reason. The clients should not know name of peer/endpoint. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-05-20 13:56:16.508-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Anthony Messina (amessina) 2016-06-18 14:26:40.942-0500 Unfortunately after https://github.com/asterisk/asterisk/commit/b3142e99e4a03c5137a72d87f31f525f0a817f8f, I am unable to build with IMAP_STORAGE any longer: {code} app_voicemail.c: In function 'mm_status': app_voicemail.c:3266:50: error: 'MAX_OBJECT_FIELD' undeclared (first use in this function) if (!DEBUG_ATLEAST(5) || !(str = ast_str_create(MAX_OBJECT_FIELD))) { ^ app_voicemail.c:3266:50: note: each undeclared identifier is reported only once for each function it appears in {code} By: Richard Mudgett (rmudgett) 2016-06-20 12:19:23.203-0500 Compiler error fix in reviews: https://gerrit.asterisk.org/#/c/3044/ https://gerrit.asterisk.org/#/c/3045/ By: Anthony Messina (amessina) 2016-06-22 19:33:24.666-0500 I can confirm that https://gerrit.asterisk.org/#/c/3045/ fixes the IMAP_STORAGE build issue. Thank you. | ||